vencord/QualityofLife.css
/* ... */
/* Boost progress bar */
#channels > ul > li > div[data-list-item-id^="channels___boosts"] { display: none; }

div[role="tablist"] {
  /* [Server settings][Sidebar]: Boost tab */
  div[class^="serverBoostTabItem"] {
    display: var(--display-server-settings-boost-tab);

    /* Disable SVG icon */
    svg { display: none; }

    /* Separator after tab */
    + div[class^="separator"] { display: none; }
  }
}

/* [Server settings][Overview]: Server Banner & Invite Background */
#overview-tab div[class^="divider"]:has( > div > div > div[class^="upsell"]) { display: none; }

/* [Server settings][Roles]: Hide role icon*/
#roles-tab div[class^="container"]:has(div[class^="availabilityIndicator"]) { display: none; }

/* [Server settings][Stickers]: Hide locked tier content */
#stickers-tab {
  div[class^="upsellContainer"] { display: none; }

  div[class*="tierHeaderLocked"] + div > div[class^="emptyTierWrapper"] { display: none; }
}

/* [Server settings][Boost]: Server boost ad at the bottom */
#guild_premium-tab > div[class^="divider"] {
  display: none;

  ~ div[class^="wrapper"] { display: none; }
  ~ div[class^="tier0Container"] { display: none; }
}

/* Chat Gap Removal */
.visual-refresh {
  .textArea__74017 {
    left: -10px;
  }
}

/* Scrollable Compact Codeblocks */
.codeContainer__75297 > code {
  max-height: var(--codeblock-height);
  overflow-y: scroll;
  &::-webkit-scrollbar {
    height: 8px;
    width: 8px;
  }
  &::-webkit-scrollbar-corner {
    background-color: transparent;
  }
    &::-webkit-scrollbar-track, &::-webkit-scrollbar-thumb {
    /* visibility: hidden; */
  }
  &::-webkit-scrollbar-thumb {
    background-clip: padding-box;
    background-color: var(--scrollbar-thin-thumb);
    border: 2px solid transparent;
    border-radius: 4px;
    min-height: 40px;
  }
  &:hover::-webkit-scrollbar-track, &:hover::-webkit-scrollbar-thumb {
    visibility: visible;
  }
  &::-webkit-scrollbar-track {
    background-color: var(--scrollbar-thin-track);
    border: 2px solid var(--scrollbar-thin-track);
    border-color: var(--scrollbar-thin-track);
  }
}

/* Hide clan (guild) tags */
[class*="chipletContainerInner_"]:has([src*="/clan-badges/"]) { display: none; }

/* Fullscreen Settings */
.sidebarRegion__23e6b {
  flex: none;
}

.contentColumn__23e6b {
  max-width: 100%;
}

/* Hide nameplates */
[style^="background: linear-gradient(90deg"]:has([src*="/nameplates/"]) { display: none; }
[class*="dm_"]:has([class*="linkPlated_"]) {
    & [class*="linkPlated_"] { padding-right: var(--space-16); }
    & [class*="closeButtonPlated_"] {
        opacity: 0.7;
        &:hover { opacity: 1; }
        & [class^="innerCloseButtonPlated"] {
            opacity: unset; 
            background: none;
            & svg {
                color: inherit;
                &:is(:hover, :focus-within) { color: var(--interactive-hover); }
            }
        }
    }
}

